bắt lỗi cartDetail trống